4:00 pieces on board and highlight works

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -6,6 +6,48 @@ body{
   background-attachment: fixed;
 }
 
+#table{
+  background-color:white;
+}
+
+td{
+
+  padding: 25px;
+  border: 2px solid black;
+}
+
+.validSpace{
+  background-color:black;
+}
+.player1{
+  background-image: url('../media/redbird.png');
+  background-image: cover;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.player2{
+  background-image:url('../media/yellowbird.png');
+  background-image:cover;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.selected{
+  background-color:yellow;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
   /* Set your content font stack here: */
