--- a/app/css/app.less
+++ b/app/css/app.less
@@ -20,13 +20,13 @@ td{
   background-color:black;
 }
 .player1{
-  background-image: url('../media/redbird.png');
+  background-image: url('../media/icon1.png');
   background-image: cover;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 .player2{
-  background-image:url('../media/yellowbird.png');
+  background-image:url('../media/icon2.png');
   background-image:cover;
   background-repeat: no-repeat;
   background-size: 100%;
