move Piece implemented, not working. Deselect also functional

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,43 +1,59 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body{
-  background-image: url('../media/bg.svg');
+  background-image: url('../media/space.png');
   background-size: cover;
   background-attachment: fixed;
 }
 
-#table{
+#container2{
+
+}
+
+#board{
   background-color:white;
 }
 
 td{
-
   padding: 25px;
-  border: 2px solid black;
+  border: 3px solid rgba(74, 74, 74, 0.85);
 }
 
 .validSpace{
   background-color:black;
 }
+
 .player1{
   background-image: url('../media/icon1.png');
   background-image: cover;
   background-repeat: no-repeat;
   background-size: 100%;
 }
+
 .player2{
   background-image:url('../media/icon2.png');
   background-image:cover;
   background-repeat: no-repeat;
   background-size: 100%;
 }
+
 .selected{
-  background-color:yellow;
+  background-color:rgba(235, 224, 0, 0.7);
 }
 
+h1{
+  color:white;
+  margin:0% 40% 0% 40%;
+  width:20%;
+  text-align:center;
+  border-radius:20px;
+  height:40px;
+}
 
-
-
+#reset{
+  width:80px;
+  height:50px;
+}
 
 
 
