double jumps dont work, everything else does

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -36,7 +36,12 @@ td{
   background-repeat: no-repeat;
   background-size: 100%;
 }
-
+.player1.king{
+  background-image:url('../media/deathstar.png');
+}
+.player2.king{
+  background-image:url('../media/goldenrebel.png');
+}
 .selected{
   background-color:rgba(235, 224, 0, 0.7);
 }
