everything except double jumps

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -12,10 +12,15 @@ body{
 
 #board{
   background-color:white;
+  padding:0px;
+}
+table{
+  height:100%;
+  width:100%;
 }
 
 td{
-  padding: 25px;
+  padding: 30px;
   border: 3px solid rgba(74, 74, 74, 0.85);
 }
 
@@ -60,7 +65,9 @@ h1{
   height:50px;
 }
 
-
+.current{
+  border: 1px dotted rgba(255, 237, 32, 0.48);
+}
 
 
 
